[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/JoinServerUI.gd" type="Script" id=1]

[node name="JoinServerUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Window" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -199.0
margin_top = -131.0
margin_right = 199.0
margin_bottom = -5.0

[node name="Title" type="Label" parent="Window"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -33.5
margin_right = 33.5
margin_bottom = 14.0
text = "Join Server"

[node name="PlayerInfo" type="VBoxContainer" parent="Window"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 26.0
margin_bottom = 1.0

[node name="PlayerNameInfo" type="HBoxContainer" parent="Window/PlayerInfo"]
margin_right = 398.0
margin_bottom = 24.0

[node name="PlayerNameLabel" type="Label" parent="Window/PlayerInfo/PlayerNameInfo"]
margin_top = 5.0
margin_right = 85.0
margin_bottom = 19.0
text = "Player Name:"

[node name="LineEdit" type="LineEdit" parent="Window/PlayerInfo/PlayerNameInfo"]
margin_left = 89.0
margin_right = 398.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Enter your name..."

[node name="ServerHostInfo" type="HBoxContainer" parent="Window/PlayerInfo"]
margin_top = 28.0
margin_right = 398.0
margin_bottom = 52.0

[node name="ServerHostLabel" type="Label" parent="Window/PlayerInfo/ServerHostInfo"]
margin_top = 5.0
margin_right = 95.0
margin_bottom = 19.0
text = "Server Host IP:"

[node name="LineEdit" type="LineEdit" parent="Window/PlayerInfo/ServerHostInfo"]
margin_left = 99.0
margin_right = 398.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Enter your name..."

[node name="JoinButton" type="Button" parent="Window/PlayerInfo"]
margin_left = 181.0
margin_top = 56.0
margin_right = 216.0
margin_bottom = 76.0
size_flags_horizontal = 4
text = "Join"

[node name="ExitButton" type="Button" parent="Window"]
margin_right = 12.0
margin_bottom = 20.0
text = "X"

[connection signal="pressed" from="Window/PlayerInfo/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="Window/ExitButton" to="." method="_on_ExitButton_pressed"]
